Realignment fix

--- a/MainPageStyles.css
+++ b/MainPageStyles.css
@@ -54,13 +54,13 @@ body {
     flex-direction: column;
     justify-content: center;
     position: relative;
-    height: 78vh;
+    height: 80vh;
 }
 
 #CurrentWeather {
     display: flex;
     padding: 4px;
-    margin: 8px;
+    margin: 4px;
     height: 25%;
     border-radius: 4px;
     gap: 1%;
@@ -73,11 +73,11 @@ body {
 }
 
 #Temperature {
-    width: 75%;
+    width: 71%;
 }
 
 #WeatherAlerts {
-    width: 25%;
+    width: 30%;
 }
 
 #columns {
